--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
      </section>
 
     <!-- About us -->
+     <section>
+        <div class="About-container">
+            <div class="About-content">
+
+            </div>
+        </div>
+     </section>
      
 </body>
 </html>
