--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <title>Metmetric</title>
 </head>
 <body>
+    <script>
+    const heroContent = document.querySelector('.Hero-content');
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+        if (entry.isIntersecting) {
+            heroContent.classList.add('animate');
+        }
+        });
+    });
+    observer.observe(heroContent);
+    </script>
+    
     <!-- Hero -->
     <section style="background-image: url('./Assets/background_15\ \(1\).svg'); background-size: cover;">
         
