--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     });
     observer.observe(heroContent);
     </script>
-    
+
     <!-- Hero -->
     <section style="background-image: url('./Assets/background_15\ \(1\).svg'); background-size: cover;">
         
@@ -145,7 +145,7 @@
                                     <img src="/Assets/HelixFlow.svg" alt="">
                                     <div class="card-text">
                                         <h2>HelixFlow</h2> 
-                                        <p>Bespoke Workflow Management Software</p>
+                                        <p>Bespoke Workflow Management Software.</p>
                                     </div>
                                 </div>
                             </div>
