--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="circle">
                             <div class="circle-gradient">
                                 <div class="icon">
-                                    <img src="/Assets/kwh.svg" alt="">
+                                    <img id="kwh" src="/Assets/kwh.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                         <div class="circle">
                             <div class="circle-gradient">
                                <div class="icon">
-                                    <img src="/Assets/Ui.svg" alt="">
+                                    <img id="ui" src="/Assets/Ui.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                         <div class="circle">
                             <div class="circle-gradient">
                                 <div class="icon">
-                                    <img src="/Assets/Code.svg" alt="">
+                                    <img id="code" src="/Assets/Code.svg" alt="">
                                 </div>
                             </div>
                         </div>
