--- a/about.html
+++ b/about.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/portfolio.css">
+    <link rel="stylesheet" href="/CSS/responsivness.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,30p;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,30p;1,800;1,900&display=swap" rel="stylesheet">
     <title>About Us</title>
 </head>
 <body>
-    
+    <section style="background-image: url('./Assets/background_36.svg'); background-size: cover; height: 1010px;;">
+        <div class="Navbar">
+            <nav>
+                <div class="Logo">
+                    <a href="/index.html">
+                        <img  src="/Assets/Mask group (1).svg" alt="Logo">
+                    </a>
+                </div>
+
+                <div class="menu-toggle" id="menu-toggle">&#9776;</div> <!-- Hamburger icon -->
+
+                <div class="links" id="nav-links">
+                    <a href="">Home</a>
+                    <a href="">About Us</a>
+                    <a href="">Our Services</a>
+                    <a href="">Contact Us</a>
+                </div>
+            </nav>
+        </div>
+
+        <div class="about-header">
+            <h1></h1>
+        </div>
+    </section>
 </body>
 </html>
