--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="menu-toggle" id="menu-toggle">&#9776;</div> <!-- Hamburger icon -->
 
             <div class="links" id="nav-links">
-            <a href="">Home</a>
-            <a href="">About Us</a>
+            <a href="/index.html">Home</a>
+            <a href="/about.html">About Us</a>
             <a href="">Our Services</a>
             <a href="">Contact Us</a>
             </div>
