--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <!-- Hero -->
     <section style="background-image: url('./Assets/background_15\ \(1\).svg'); background-size: cover;">
-        
+        <!-- navbar -->
        <div class="Navbar">
         <nav>
             <div class="Logo">
