--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
      <link rel="stylesheet" href="/CSS/styles.css">
     <link rel="stylesheet" href="/CSS/portfolio.css">
     <link rel="stylesheet" href="/CSS/responsivness.css">
+    <link rel="stylesheet" href="/CSS/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,30p;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,30p;1,800;1,900&display=swap" rel="stylesheet">
@@ -32,9 +33,9 @@
             </nav>
         </div>
 
-        <div class="about-header">
-            <h1></h1>
-        </div>
+       <div class="about-heading">
+            <h1>Our History<br><span>& Background</span></h1>
+       </div>
     </section>
 </body>
 </html>
